--- a/sources/sections/00-preface.adoc
+++ b/sources/sections/00-preface.adoc
@@ -1,64 +1,38 @@
 [.preface]
 == Preface
 
-This OGC member developed and approved document, referred to as the `ModSpec`, defines a model and related requirements 
-and recommendations for writing and structuring modular standards documents. Further, this model is designed to enable 
-consistent and verifiable testing of implementations of a standard that claim conformance. The ModSpec is a meta-standard: 
-A standard specifying requirements for crafting and documenting modular and testable standards. 
+This OGC member developed and approved document, referred to as the "ModSpec", defines a model and related requirements
+and recommendations for writing and structuring modular standards documents. Further, this model is designed to enable
+consistent and verifiable testing of implementations of a standard that claim conformance. The ModSpec is a meta-standard:
+A standard specifying requirements for crafting and documenting modular and testable standards.
 
 The goals of using the ModSpec are:
 
-- To define characteristics and a structure for the development of modular standards which will minimize the difficulty in writing testable standards while maximizing usability and interoperability.
-- To ensure that a standard specifies requirements in a common and consistent manner and that these requirements are testable.
+* To define characteristics and a structure for the development of modular standards which will minimize the difficulty in writing testable standards while maximizing usability and interoperability.
+* To ensure that a standard specifies requirements in a common and consistent manner and that these requirements are testable.
 
 NOTE: Historically, this document has been known and abbreviated as the "ModSpec". For continuity and ease of understanding this document is also be referred to as the "OGC ModSpec".
 
 Suggested additions, changes, and comments on this document are welcome and
-encouraged. Such suggestions may be submitted by creating an issue in the 
+encouraged. Such suggestions may be submitted by creating an issue in the
 OGC ModSpec GitHub repository (https://github.com/opengeospatial/ogc-modspec).
 
-[.preface]
-== Document terms and definitions
 
-This document uses the terms defined in OGC Policy Directive 49, which is based on the ISO/IEC Directives, Part 2, Rules for the structure and drafting of International Standards. 
-In particular, the word “shall” (not “must”) is the verb form used to indicate a requirement to be strictly followed to conform to this ModSpec standard.
+== Submitters
 
-[.preface]
-== Document editors
+The following OGC Members contributed and particpated in developing the ModSpec Version 1.1.
 
-The following OGC Members participated in editing this document:
+All questions regarding this submission should be directed to the editor or the
+submitters:
 
-[%unnumbered]
 |===
-^h| Person ^h| Organization Represented
-| Carl Reed | Carl Reed & Associates
-| Chuck Heazel | Charles Heazel
-|===
+|Name |Affiliation
 
-[.preface]
-== Document Contributors
-
-The following OGC Members contributed and particpated in developing the ModSpec Version 1.1 
-
-[%unnumbered]
-|===
-^h| Person ^h| Organization Represented
 | Carl Reed | Carl Reed & Associates
 | Chuck Heazel | Heazeltech
 | Jeff Yutzler | ImageMatters/Tema
+
 |===
-
-[.preface]
-== Submitting organizations
-
-The following OGC Members support the ModSpec Version 1.1 submission
-
-[%unnumbered]
-
-- Carl Reed & Associates
-- Heazeltech
-- ImageMatters/Tema
-- UK Met Office
 
 
 [.preface]
@@ -69,10 +43,10 @@ This is the second normative version of this document.
 [.preface]
 == Future work
 
-This version of the ModSpec restructures the document into a multi-part standard. This document is Part 1 - Core. 
+This version of the ModSpec restructures the document into a multi-part standard. This document is Part 1 - Core.
 It provides a technology agnostic model for modular standards. Future "parts" will be specific for different technologies. Planned extensions include:
 
-- ModSpec Part providing requirements and recommendations for specifying requirements and conformance tests using RDFS, SHACL, and OWL.
-- ModSpec Part providing requirements and recommendations for specifying requirements and conformance tests using JSON.
+* ModSpec Part providing requirements and recommendations for specifying requirements and conformance tests using RDFS, SHACL, and OWL.
+* ModSpec Part providing requirements and recommendations for specifying requirements and conformance tests using JSON.
 
-In addition, improvements to this document will be made based on implementation and changing technical requirements. 
+In addition, improvements to this document will be made based on implementation and changing technical requirements.
