--- a/sources/ogc-modspec-policy/00-preface.adoc
+++ b/sources/ogc-modspec-policy/00-preface.adoc
@@ -1,9 +1,9 @@
-[.preface]
+[abstract]
 == Abstract
 
-This OGC ModSpec Policy specifies requirements and guidance for using the OGC ModSpec Standard as the formal structure for all OGC standards documents. 
-This OGC member Policy mandates using the ModSpec model and related requirements and recommendations for writing and structuring modular OGC standards. 
-Further, this Policy mandates that every OGC Implementation Standard will provide an Abstract Test Suite (conformance suite)  designed to enable the consistent 
+This OGC ModSpec Policy specifies requirements and guidance for using the OGC ModSpec Standard as the formal structure for all OGC standards documents.
+This OGC member Policy mandates using the ModSpec model and related requirements and recommendations for writing and structuring modular OGC standards.
+Further, this Policy mandates that every OGC Implementation Standard will provide an Abstract Test Suite (conformance suite)  designed to enable the consistent
 and verifiable testing of implementations of an OGC Standard that claim conformance.
 
 For OGC Standards work, the word “standard” in the ModSpec applies to all OGC draft standards, approved standards, draft Abstract Specifications, and approved Abstract Specifications. The exceptions are OGC Abstract Specifications that originate in ISO or Community Standards that are developed external to the OGC process and then submitted to the OGC.
@@ -14,17 +14,17 @@ NOTE: For the purposes of this OGC ModSpec Policy document, all the terms and de
 
 == Scope
 
-The ModSpec Core Standard defines characteristics and structure for the specification of Standards 
+The ModSpec Core Standard defines characteristics and structure for the specification of Standards
 that will encourage implementation by minimizing difficulty determining
 requirements, mimicking implementation structure and maximizing usability and
-interoperability. 
+interoperability.
 
 Part 1 of the ModSpec defines the core requirements class and the related recommendations that define the ModSpec core.
 
-Part 2 of the ModSpec defines the requirements for using UML. 
-The UML extension is if the organizing mechanism for the data model used in a standard is an object model. Then the mapping from parts of the 
+Part 2 of the ModSpec defines the requirements for using UML.
+The UML extension is if the organizing mechanism for the data model used in a standard is an object model. Then the mapping from parts of the
 model to the requirements classes should follow the logical mechanism described in Part 1 of the ModSpec.
 
-Part 3 of the ModSpec defines the requirements for using XML. The XML related requirements classes 
-cover any standard which has as one of its purposes the introduction of a new XML schema. 
+Part 3 of the ModSpec defines the requirements for using XML. The XML related requirements classes
+cover any standard which has as one of its purposes the introduction of a new XML schema.
 Such a standard would normally define the schema, all of its components, and its intended uses.
