--- a/sources/sections/03-norm-refs.adoc
+++ b/sources/sections/03-norm-refs.adoc
@@ -2,6 +2,8 @@
 [bibliography]
 == Normative references
 
+[.boilerplate]
+--
 While the ModSpec references UML, SQL, JSON, and XML, and their technical specifications,
 no requirements are derived from these documents. While this document
 may be applied to extensions of those standards, conformance to them is the purview
@@ -10,13 +12,20 @@ of those standards, not the ModSpec.
 The following are normative references for this document in the sense that they
 supplied definitions used in this document.
 
-* [[[iso10000-1,ISO/IEC 10000-1:1998]]] https://www.iso.org/standard/30726.html[Information technology — Framework and taxonomy of International Standardized Profiles Part 1: General principles and documentation framework]
+// The following documents are referred to in the text in such a way that some or
+// all of their content constitutes requirements of this document. For dated
+// references, only the edition cited applies. For undated references, the latest
+// edition of the referenced document (including any amendments) applies.
+--
 
-* [[[iso-dp2,ISO/IEC DIR 2]]], available at https://www.iso.org/sites/directives/current/part2/index.xhtml[ISO/IEC Directives, Part 2: Rules for the structure and drafting of International Standards]
+// TODO: remove, already in bibliography
+// * [[[iso10000,ISO/IEC 10000-1:1998]]] https://www.iso.org/standard/30726.htmlInformation technology — Framework and taxonomy of International Standardized Profiles Part 1: General principles and documentation framework
+
+// TODO: move to bibliography
+* [[[iso-dp2,ISO/IEC DIR 2]]], available at https://www.iso.org/sites/directives/current/part2/index.xhtml
+ISO/IEC Directives, Part 2: Rules for the structure and drafting of International Standards
 
 * [[[iso19105:2022,ISO 19105:2022]]], Geographic information — Conformance and testing
 
-* [[[ogc-modspec,OGC 08-131r3]]], https://portal.ogc.org/files/?artifact_id=34762[The Specification Model — A Standard for Modular specifications Version 1]
-
-
-
+* [[[ogc-modspec,OGC 08-131r3]]], https://portal.ogc.org/files/?artifact_id=34762
+The Specification Model — A Standard for Modular specifications Version 1
