--- a/sources/sections/04-terms-and-defs.adoc
+++ b/sources/sections/04-terms-and-defs.adoc
@@ -1,315 +1,321 @@
 [[cls-4]]
-== Terms and definitions by category
+== Terms, definitions and abbreviated terms
 
 [.boilerplate]
+--
+This document uses the terms defined in OGC Policy Directive 49, which is based
+on the ISO/IEC Directives, Part 2, Rules for the structure and drafting of
+International Standards. In particular, the word “shall” (not “must”) is the
+verb form used to indicate a requirement to be strictly followed to conform to
+this document and OGC documents do not use the equivalent phrases in the ISO/IEC
+Directives, Part 2.
 
-For the purposes of this document, the following terms and definitions shall apply.
-Terms not defined here take their meaning from computer science or from their
-Standard English (common US and UK) meanings. The form of the definitions is
-defined by ISO Directives.
+Many of these definitions depend upon the model given in <<annex-C>> of this
+document.
 
-Many of these definitions depend upon the model given in <<annex-C,Annex C: ModSpec UML Model, Semantics, and Definitions>>.
+For the purposes of this document, the following additional terms and
+definitions apply.
+--
 
-=== Building Blocks Terms and Definitions
+=== Terms and definitions
 
-[[buildingblock-definition]]
+==== Terms related to building blocks
 
-==== building block (foundation)
+===== building block (foundation)
 
-<<requirementsclass-definition,requirements class>> or <<requirementspackage-definition,requirements package>> with no direct dependencies on other requirements classes or packages and their associated <<conformanceclass-definition,conformance test class>> or <<conformancepackage-definition,conformance test package>> 
+{{requirements class}} or {{requirements package}} with no direct dependencies on other requirements classes or packages and their associated {{conformance test class}} or {{conformance package}}
 
-[[dependency-definition]]
 
-==== dependency 
+===== dependency
 
-module (the target) which is used by, produced by, or associated with an implementation of the source module 
+module (the target) which is used by, produced by, or associated with an implementation of the source module
 
-[[directdependency-definition]]
 
-==== direct dependency
+===== direct dependency
 
 another requirements class (the dependency) whose requirements are defined to also be requirements of this requirements class
 
-NOTE: A direct dependency (of a requirements class) of the current requirements class will have the same standardization target as the current requirements class. This is another ways of saying that the current requirements class extends, or uses all the aspects of the direct dependency (or a requirements class). Any tests associated with this dependency can be applied to this requirements class. 
+NOTE: A direct dependency (of a requirements class) of the current requirements class will have the same standardization target as the current requirements class. This is another ways of saying that the current requirements class extends, or uses all the aspects of the direct dependency (or a requirements class). Any tests associated with this dependency can be applied to this requirements class.
 
-NOTE: When testing a direct dependency of a requirements class, the standardization target is directly subject to the test in the specified conformance test class of the direct dependency of a requirements class.  
+NOTE: When testing a direct dependency of a requirements class, the standardization target is directly subject to the test in the specified conformance test class of the direct dependency of a requirements class.
 
-[[extension-definition]]
 
-==== extension
+===== extension
 
-requirements class which has a direct dependency on another requirements class 
+requirements class which has a direct dependency on another requirements class
 
-NOTE: Here an extension of a requirements class is defined in the model on requirements class so that their implementation 
-may be software extensions in a manner analogous to the extension relation between the requirements classes.  
+NOTE: Here an extension of a requirements class is defined in the model on requirements class so that their implementation
+may be software extensions in a manner analogous to the extension relation between the requirements classes.
 
-[[indirectdependency-definition]]
 
-==== indirect dependency
+===== indirect dependency
 
-requirements class with a different standardization target which is used by, produced by, or associated with the implementation of this requirements class 
+requirements class with a different standardization target which is used by, produced by, or associated with the implementation of this requirements class
 
 NOTE: In this instance, as opposed to the direct dependency of a requirements class, the test against the consumable or product used or produced by the requirements class does not directly test the requirements class, but tests only its side effects. Hence, a particular type of feature service could be required to produce valid XML documents, but the test of validity for the XML document is not directly testing the service, but only indirectly testing the validity of its output. Direct dependencies test the same standardization target, but indirect dependencies test related but different standardization targets. +
-For example, if a DRM-enabled service is required to have an association to a licensing service, then the requirements of a licensing service are indirect requirements for the DRM-enabled service. Such a requirement may be stated as the associated licensing service has a certificate of conformance of a particular kind.  
+For example, if a DRM-enabled service is required to have an association to a licensing service, then the requirements of a licensing service are indirect requirements for the DRM-enabled service. Such a requirement may be stated as the associated licensing service has a certificate of conformance of a particular kind.
 
-[[module-definition]]
 
-==== module
+===== module
 
 each of a set of standardized parts or independent units that can be used to construct a more complex structure
 
-NOTE: The concept ‘module’ is key to the ModSpec structure and model. Modules have a direct relationship to the concept of building blocks. 
-The power of the concept is that modules can be reused in different systems (specify once, use many). Modules can be imported from other programs. 
-Modules can be replaced without affecting the rest of the system. 
+NOTE: The concept ‘module’ is key to the ModSpec structure and model. Modules have a direct relationship to the concept of building blocks.
+The power of the concept is that modules can be reused in different systems (specify once, use many). Modules can be imported from other programs.
+Modules can be replaced without affecting the rest of the system.
 
-[[package-definition]]
 
-==== package
+===== package
 
-general-purpose mechanism for organizing elements into groups. 
+general-purpose mechanism for organizing elements into groups
 
-NOTE: This definition is conceptually consistent with both UML `package` and ISO TC 211 `package` and `requirements suite` definitions.
+NOTE: This definition is conceptually consistent with both UML "package" and ISO TC 211 "package" and "requirements suite" definitions.
 
-SOURCE: Rumbaugh J, Jacobson I, Booch G, The Unified Modeling Language Reference Manual 1999
+[.source]
+<<uml_manual>>
 
-[[part-document-definition]]
 
-==== part (standard)
+===== part
+domain:[standard]
 
 document which is one of the many documents which make up a multi-part standard.
 
-NOTE: A multi-part standard is physically structured into a `core` and additional parts where each part is a separate document. These parts may be extensions to the core or have a different standardization target type/subtype.
+NOTE: A multi-part standard is physically structured into a "core" and additional parts where each part is a separate document. These parts may be extensions to the core or have a different standardization target type/subtype.
 
-[[part-requirement-definition]]
 
-==== part (requirement)
+===== part
+domain:[requirement]
 
-normative statement which together with other normative statements constitute a requirement. 
+normative statement which together with other normative statements constitute a
+{{requirement}}
 
-NOTE: The requirement parts are co-dependent. 
+NOTE: The requirement parts are co-dependent.
 
-[[profile-definition]]
 
-==== profile
+===== profile
 
-specification or standard consisting of a set of references to one or more base standards and/or other profiles, and the identification of any chosen conformance test classes, conforming subsets, options and parameters of those base standards, or profiles necessary to accomplish a particular function. 
+specification or standard consisting of a set of references to one or more base standards and/or other profiles, and the identification of any chosen conformance test classes, conforming subsets, options and parameters of those base standards, or profiles necessary to accomplish a particular function.
 
-NOTE:  In the usage of the ModSpec, a profile is a set of requirements classes or conformance classes (either preexisting or locally defined) of the base standards.
+NOTE: In the usage of the ModSpec, a profile is a set of requirements classes or conformance classes (either preexisting or locally defined) of the base standards.
 
 This means that a standardization target being conformant to a profile implies that the same target is conformant to the standards referenced in the profile.
 
-SOURCE: ISO/IEC TR 10000-1    
+[.source]
+<<iso10000>>
 
-=== Document Terms and Definitions
 
-[[bestpractice-definition]]
+==== Terms related to document
 
-==== best practice
 
-<<specification-definition,specification>> that has been approved by a legitimate Standards Body as a recommendation for implementation.  
+===== best practice
 
-[[certificateofconformance-definition]]
+{{specification}} that has been approved by a legitimate Standards Body as a
+recommendation for implementation.
 
-==== certificate of conformance
 
-evidence of conformance to all or part of a standard, awarded for passing one or more of the conformance test classes specified in that standard 
+===== certificate of conformance
 
-NOTE:  Certificates do not have to be instantiated documents. Having proof of passing the conformance test class is sufficient. For example, the OGC currently keeps an online list of conformant applications at http://www.opengeospatial.org/resource/products. 
+evidence of conformance to all or part of a standard, awarded for passing one or
+more of the conformance test classes specified in that standard
+
+NOTE: Certificates do not have to be instantiated documents. Having proof of passing the conformance test class is sufficient. For example, the OGC currently keeps an online list of conformant applications at http://www.opengeospatial.org/resource/products.
 Each certificate of conformance is awarded to a standardization target.
 
-[[informativestatement-definition]]
 
-==== informative statement
+===== informative statement
 
 expression in a document conveying non-normative information
 
-NOTE: Includes all statements in a document not part of the normative requirements, recommendations, permissions, or conformance tests. Included for completeness. 
+NOTE: Includes all statements in a document not part of the normative requirements, recommendations, permissions, or {{conformance test,conformance tests}}. Included for completeness.
 
-[[normativestatement-definition]]
 
-==== normative statement
+===== normative statement
 
 expression in a document conveying information required to define conformance
 
-NOTE:  Includes all normative statements in a document including requirements, recommendations, permissions, and conformance tests. Included for completeness. 
+NOTE: Includes all normative statements in a document including requirements, recommendations, permissions, and {{conformance test,conformance tests}}. Included for completeness.
 
-[[specification-definition]]
 
-==== specification
+===== specification
 
-document containing recommendations, requirements, permissions, and conformance tests
+document containing recommendations, requirements, permissions, and {{conformance test,conformance tests}}
 
-NOTE:  This definition is included for completeness. 
+NOTE: This definition is included for completeness.
 
-NOTE:  In the OGC, there are Abstract Specifications and Implementation Standards. Abstract Specifications may or may not be testable. Further, Abstract Specifications may not be directly implementable. Implementation Standards are always testable and contain a conformance test suite. 
+NOTE: In the OGC, there are Abstract Specifications and Implementation Standards. Abstract Specifications may or may not be testable. Further, Abstract Specifications may not be directly implementable. Implementation Standards are always testable and contain a conformance test suite.
 
-[[standard-definition]]
 
-==== standard
+===== standard
 
-<<specification-definition,specification>> that has been approved by a legitimate Standards Body 
+{{specification}} that has been approved by a legitimate Standards Body
 
-NOTE:  This definition is included for completeness. Standard and specification can apply to the same document. While specification is always valid, standard only applies after the adoption of the document by a legitimate standards organization.  
+NOTE: This definition is included for completeness. Standard and specification can apply to the same document. While specification is always valid, standard only applies after the adoption of the document by a legitimate standards organization.
 
-NOTE:  A standard should consist primarily of Normative Statements. The goal should be for the standard to be concise. Supporting information can be provided through a user's guide. 
+NOTE: A standard should consist primarily of Normative Statements. The goal should be for the standard to be concise. Supporting information can be provided through a user's guide.
 
-[[statement-definition]]
 
-==== statement
+===== statement
 
-expression in a document conveying information 
+expression in a document conveying information
 
-[[usersguide-definition]]
 
-==== users guide
+===== users guide
 
-non-normative information that assists in understanding a standard but is not required to implement the standard.   
+non-normative information that assists in understanding a standard but is not required to implement the standard.
 
-=== Core Terms and Definitions
+==== Terms related to core
 
-[[conformanceclass-definition]]
 
-==== conformance class +
-conformance test class
+===== conformance class
+alt:[conformance test class]
 
-set of <<conformancetest-definition,conformance tests>> that must be passed to receive a single <<certificateofconformance-definition,certificate of conformance>>
+set of {{conformance test,conformance tests}} that must be passed to receive a single {{certificate of conformance}}
 
-[[conformancepackage-definition]]
 
-==== conformance package
+===== conformance package
 
-set (grouping) of related conformance classes and their associated components. 
+set (grouping) of related conformance classes and their associated components.
 
-[[conformancesuite-definition]]
 
-==== conformance suite
+===== conformance suite
 
-set of <<conformanceclass-definition,conformance classes>> and/or <<conformancemodule-definition,conformance packages>> that define <<conformancetest-definition,tests>> for all <<requirement-definition,requirements>> of a <<standard-definition,standard>>
+set of {{conformance class,conformance classes}} and/or {{conformance
+package,conformance packages}} that define {{conformance test,conformance
+tests}} for all {{requirement,requirements}} of a {{standard}}
 
-NOTE:  The *conformance suite* is the union of all *conformance classes* and their associated <<conformanceclass-definition,conformance classes>>. It is by definition the *conformance class* of the entire *standard* or *abstract specification*.  
+NOTE: The *conformance suite* is the union of all *conformance classes* and
+their associated {{conformance class,conformance classes}}. It is by definition
+the *conformance class* of the entire *standard* or *abstract specification*.
 
-[[conformancetest-definition]]
 
-==== conformance test
+===== conformance test
 
-test, abstract or real, of one or more <<requirement-definition,requirements>> contained within a standard, or set of standards  
+test, abstract or real, of one or more {{requirement,requirements}} contained within a standard, or set of standards
 
-[[conformancetestmethod-definition]]
 
-==== conformance test method
+===== conformance test method
 
-process used to test an implementation of the standard for conformance. 
+process used to test an implementation of the standard for conformance.
 
 NOTE: Testing may be automated, manual, or a hybrid.
 
 NOTE: Testing by an independent second party is recommended.
 
-[[corerequirementsclass-definition]]
 
-==== core requirements class
+===== core requirements class
 
 unique requirements class that must be satisfied by any conformant standardization targets associated with the standard
 
-NOTE:  The core requirements class is unique because if it were possible to have more than one, then each core would have to be implemented to pass any conformance test class, and thus would have to be contained in any other core. The core may be empty, or all or part of another standard or related set of standards. 
+NOTE: The core requirements class is unique because if it were possible to have more than one, then each core would have to be implemented to pass any conformance test class, and thus would have to be contained in any other core. The core may be empty, or all or part of another standard or related set of standards.
 
-NOTE: The core can refer to this requirements class, its associated conformance test class, or the software module that implements that requirements class.  
+NOTE: The core can refer to this requirements class, its associated conformance test class, or the software module that implements that requirements class.
 
-[[model-definition]]
 
-==== model
+===== model
 
 representation of those aspects of the standardization target type which are to be governed by a standard. The model captures both the conceptual and logical properties of the standardization target type. The requirements promulgated by a standard should be expressed in terms of those conceptual and logical properties.
 
-In short, the model provides the vocabulary for expressing requirements. 
-
-[[permission-definition]]
-
-==== permission
-
-expression, in the content of a <<standard-definition,standard>>, that conveys consent or liberty (or opportunity) to do something
-
-SOURCE: ISO Directives Part 2 
-
-NOTE:: uses “may” and is used to prevent a requirement from being “over interpreted” and as such is considered to be more of a “statement of fact” rather than a “normative” condition. 
-
-[[recommendation-definition]]
-
-==== recommendation
-
-expression, in the content of a <<standard-definition,standard>>, that conveys a suggested possible choice or course of action deemed to be particularly suitable without necessarily mentioning or excluding others.
-
-NOTE:: In the negative form, a recommendation is the expression that a suggested possible choice or course of action is not preferred but it is not prohibited.
-
-SOURCE: ISO Directives Part 2 
-
-NOTE:  Although using normative language, a recommendation is not a requirement. The usual form replaces the `shall` (imperative or command) of a requirement with a `should` (suggestive or conditional). 
-
-NOTE:  Recommendations are not tested and therefore have no related conformance test.
+In short, the model provides the vocabulary for expressing requirements.
 
 
-[[requirement-definition]]
+===== permission
 
-==== requirement
+expression, in the content of a {{standard}}, that conveys consent or liberty (or opportunity) to do something
 
-expression, in the content of a <<standard-definition,standard>>, that conveys objectively verifiable criteria to be fulfilled and 
+[.source]
+<<iso-dp2>>
+
+NOTE: uses “may” and is used to prevent a requirement from being “over interpreted” and as such is considered to be more of a “statement of fact” rather than a “normative” condition.
+
+
+===== recommendation
+
+expression, in the content of a {{standard}}, that conveys a suggested possible choice or course of action deemed to be particularly suitable without necessarily mentioning or excluding others.
+
+NOTE: In the negative form, a recommendation is the expression that a suggested possible choice or course of action is not preferred but it is not prohibited.
+
+[.source]
+<<iso-dp2>>
+
+NOTE: Although using normative language, a recommendation is not a requirement. The usual form replaces the "shall" (imperative or command) of a requirement with a "should" (suggestive or conditional).
+
+NOTE: Recommendations are not tested and therefore have no related conformance test.
+
+
+
+===== requirement
+
+expression, in the content of a {{standard}}, that conveys objectively verifiable criteria to be fulfilled and
 from which no deviation is permitted if conformance with the document is to be claimed.
 
-SOURCE: ISO Directives Part 2 
+[.source]
+<<iso-dp2>>
 
-NOTE:  Each requirement is a normative criterion for a single type of <<standardizationtarget-definition,standardization target>>. 
-In the ModSpec, requirements are associated to <<conformancetest-definition,conformance tests>> that can be used to prove compliance 
-to the underlying criteria by the standardization target. The implementation of a requirement is dependent on the type of standard 
-being written. A data standard requires data structures, but a procedural standard requires software implementations. The view of 
+NOTE: Each requirement is a normative criterion for a single type of {{standardization target}}.
+In the ModSpec, requirements are associated to {{conformance test,conformance tests}} that can be used to prove compliance
+to the underlying criteria by the standardization target. The implementation of a requirement is dependent on the type of standard
+being written. A data standard requires data structures, but a procedural standard requires software implementations. The view of
 a standard in terms of a set of testable requirements supports using set descriptions of both the standard and its implementations.
-The specification of a requirement is usually expressed in terms of a model of the standardization target type, such as a UML model, 
-or an XML, JSON or SQL schema. Anything without a defined test is a-priori not testable and thus would be better expressed as a recommendation. 
-Requirements use normative language and in particular are commands and use the imperative "shall" or similar imperative constructs. Statements in 
-standards which are not requirements and need to be either conditional or future tense normally use "will" and should not be confused 
-with requirements that use "shall" imperatively  
+The specification of a requirement is usually expressed in terms of a model of the standardization target type, such as a UML model,
+or an XML, JSON or SQL schema. Anything without a defined test is a-priori not testable and thus would be better expressed as a recommendation.
+Requirements use normative language and in particular are commands and use the imperative "shall" or similar imperative constructs. Statements in
+standards which are not requirements and need to be either conditional or future tense normally use "will" and should not be confused
+with requirements that use "shall" imperatively
 
-[[requirementsclass-definition]]
 
-==== requirements class
+===== requirements class
 
-aggregate of <<requirement-definition,requirements>> with a single <<standardizationtargettype-definition,standardization target type>> that must all be satisfied to pass a <<conformanceclass-definition,conformance test Class>>.
+aggregate of {{requirement,requirements}} with a single {{standardization target type}} that
+must all be satisfied to pass a {{conformance test class}}.
 
-NOTE:  There is some confusion possible here, since the testing of <<indirectdependency-definition,indirect dependencies>> seems 
-to violate this definition. But the existence of an indirect dependency implies that the test is actually a test of the existence 
-of the relationship from the original target to something that has a property (satisfies a condition or requirement from another requirements class).  
+NOTE: There is some confusion possible here, since the testing of {{indirect
+dependency,indirect dependencies}} seems to violate this definition. But the
+existence of an indirect dependency implies that the test is actually a test of
+the existence of the relationship from the original target to something that has
+a property (satisfies a condition or requirement from another requirements
+class).
 
-[[requirementspackage-definition]]
 
-==== requirements package
+===== requirements package
 
-set (grouping) of related requirement classes and their associated components. 
+set (grouping) of related requirement classes and their associated components.
 
-[[standardizationgoal-definition]]
 
-==== standardization goal
+===== standardization goal
 
-concise statement of the problem that the standard helps address and the strategy envisioned for achieving a solution. 
+concise statement of the problem that the standard helps address and the strategy envisioned for achieving a solution.
 
-NOTE: This strategy typically identifies real-world entities that need to be modified or constrained. At the abstract level, those entities are the <<standardizationtargettype-definition,Standardization Target Types>>.  
+NOTE: This strategy typically identifies real-world entities that need to be modified or constrained. At the abstract level, those entities are the {{standardization target type,standardization target types}}.
 
-[[standardizationtarget-definition]]
 
-==== standardization target
+===== standardization target
 
-entity to which some <<requirement-definition,requirements>> of a <<standard-definition,standard>> apply
+entity to which some {{requirement,requirements}} of a {{standard}} apply
 
-NOTE:   The standardization target is the entity which may receive a certificate of conformance for a requirements class.  
+NOTE: The standardization target is the entity which may receive a certificate of conformance for a requirements class.
 
-[[standardizationtargettype-definition]]
 
-==== standardization target type
+===== standardization target type
 
-type of entity or set of entities to which the <<requirement-definition,requirement>> of a <<standard-definition,standard>> apply
+type of entity or set of entities to which the {{requirement}} of a {{standard}} apply
 
-NOTE:  For example, the standardization target type for The OGC API – Features Standard are Web APIs. The standardization target type for the CDB Standard is “datastore”. It is important to understand that a standard’s root standardization target type can have sub-types, and that there can be a hierarchy of target types. For example, a Web API can have sub types of client, server, security, and so forth. As such, each requirements class can have a standardization target type that is a sub-type of the root. 
+NOTE: For example, the standardization target type for The OGC API – Features Standard are Web APIs. The standardization target type for the CDB Standard is “datastore”. It is important to understand that a standard’s root standardization target type can have sub-types, and that there can be a hierarchy of target types. For example, a Web API can have sub types of client, server, security, and so forth. As such, each requirements class can have a standardization target type that is a sub-type of the root.
 
-[[will-definition]]
 
-==== will
+===== will
 
 In informative sections, the word "will" implies that something is an implication of a requirement. The "will" statements are
 not requirements, but explain the consequence of requirements.
+
+==== Abbreviated terms
+
+In this document the following abbreviations and acronyms are used or introduced:
+
+ERA:: Entity, Relation, Attribute (pre-object modeling technique)
+ISO:: International Organization for Standardization (from Greek for "same")
+OGC:: Open Geospatial Consortium (http://www.opengeospatial.org/)
+SQL:: ISO/IEC 9075 query language for relational databases, not originally an acronym, but now often cited as "Structured Query Language"
+TC:: Technical Committee (usually either in ISO or OGC)
+UML:: Unified Modeling Language (an object modeling language)
+XML:: eXtensible Markup Language
+OMG:: Object Management Group (http://www.omg.org/)
