--- a/sources/sections/05-conventions.adoc
+++ b/sources/sections/05-conventions.adoc
@@ -13,49 +13,37 @@ available standard (PAS) by ISO in its earlier 1.3 version.
 
 The normative provisions in this standard are denoted by the URI namespace
 
-https://www.opengis.net/spec/modspec-1/1.1/
+identifier:[https://www.opengis.net/spec/modspec-1/1.1/]
 
 All requirements that appear in this document are denoted by partial URIs which are relative to the namespace shown above.
 
 For the sake of brevity, the use of “req” in a requirement URI denotes:
 
-https://www.opengis.net/spec/modspec-1/1.1/
+identifier:[https://www.opengis.net/spec/modspec-1/1.1/]
 
 An example might be:
 
-/req/core/crs
+identifier:[/req/core/crs]
 
 All conformance tests that appear in this document are denoted by partial URIs which are relative to the namespace shown above.
 
 For the sake of brevity, the use of “conf” in a requirement URI denotes:
 
-https://www.opengis.net/spec/modspec-1/1.1/
+identifier:[https://www.opengis.net/spec/modspec-1/1.1/]
 
-The same convention is used for permissions (per) and recommendations (rec).
+The same convention is used for permissions (`per`) and recommendations (`rec`).
 
-=== Abbreviations
-
-In this document the following abbreviations and acronyms are used or introduced:
-
-ERA:: Entity, Relation, Attribute (pre-object modeling technique)
-ISO:: International Organization for Standardization (from Greek for "same")
-OGC:: Open Geospatial Consortium (http://www.opengeospatial.org/)
-SQL:: ISO/IEC 9075 query language for relational databases, not originally an acronym, but now often cited as "Structured Query Language"
-TC:: Technical Committee (usually either in ISO or OGC)
-UML:: Unified Modeling Language (an object modeling language)
-XML:: eXtensible Markup Language
-OMG:: Object Management Group (http://www.omg.org/)
 
 [[cls-6-3]]
 === Finding requirements and recommendations
 
 Each normative statement in the ModSpec is stated in one and only one place,
-in a standard format, with a unique label, such as REQ001, REC001, or PER001. A requirement, recommendation, or permission may be repeated for clarification. 
-The statement with the unique label is considered the official statement of the normative requirement or recommendation. 
+in a standard format, with a unique label, such as REQ001, REC001, or PER001. A requirement, recommendation, or permission may be repeated for clarification.
+The statement with the unique label is considered the official statement of the normative requirement or recommendation.
 
 In this document, all requirements are associated with tests specified in the test suite
 in <<annex-A>>. The reference to the requirement in the conformance test is done by a
-requirements label and/or unique identifier. Recommendations and permissions are not tested although 
+requirements label and/or unique identifier. Recommendations and permissions are not tested although
 they should still be documented using a standard template and have unique labels and/or identifiers.
 
 Requirements classes are separated into their own clauses and named and specified
